crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_nested_subtraction.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% for item in seq %}\n  {{ ((item + 4) * (3 - [])) + 4 - 2 }}\n{% endfor %}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_bad_nested_subtraction.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "tried to use - operator on unsupported types number and sequence",
    name: "err_bad_nested_subtraction.txt",
    line: 2,
}

invalid operation: tried to use - operator on unsupported types number and sequence
(in err_bad_nested_subtraction.txt:2)
----------------------- err_bad_nested_subtraction.txt ------------------------
   1 | {% for item in seq %}
   2 >   {{ ((item + 4) * (3 - [])) + 4 - 2 }}
     i                     ^^^^^^ invalid operation
   3 | {% endfor %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    item: 1,
    loop: <loop 0/3>,
    seq: (
        1,
        2,
        3,
    ),
}
-------------------------------------------------------------------------------
