crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_block_twice.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% block foo %}{% endblock %}\n{% block foo %}{% endblock %}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_block_twice.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "block 'foo' defined twice",
    name: "err_block_twice.txt",
    line: 2,
}

syntax error: block 'foo' defined twice
(in err_block_twice.txt:2)
----------------------------- err_block_twice.txt -----------------------------
   1 | {% block foo %}{% endblock %}
   2 > {% block foo %}{% endblock %}
     i          ^^^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
