crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_duplicate_macro_arg.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% macro two_args(a, b) %}\n  {{ a }} and {{ b }}\n{% endmacro %}\n{{ two_args(1, a=2) }}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_duplicate_macro_arg.txt
---
!!!ERROR!!!

Error {
    kind: TooManyArguments,
    detail: "duplicate argument `a`",
    name: "err_duplicate_macro_arg.txt",
    line: 4,
}

too many arguments: duplicate argument `a`
(in err_duplicate_macro_arg.txt:4)
------------------------- err_duplicate_macro_arg.txt -------------------------
   1 | {% macro two_args(a, b) %}
   2 |   {{ a }} and {{ b }}
   3 | {% endmacro %}
   4 > {{ two_args(1, a=2) }}
     i ^^^^^^^^^^^^^^^^^^^^^^ too many arguments
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    two_args: <macro two_args>,
}
-------------------------------------------------------------------------------
