crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_partial_float.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ 42e+ }}"
info: {}
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_partial_float.txt
---
!!!SYNTAX ERROR!!!

Error {
    kind: SyntaxError,
    detail: "invalid float",
    name: "err_partial_float.txt",
    line: 1,
}

syntax error: invalid float
(in err_partial_float.txt:1)
---------------------------- err_partial_float.txt ----------------------------
   1 > {{ 42e+ }}
     i        ^ syntax error
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
No referenced variables
-------------------------------------------------------------------------------
